Upload task for lesson 2

--- a/styles.css
+++ b/styles.css
@@ -2,88 +2,31 @@
 https://colorhunt.co/palette/781c689a0680ffd39afff5e1
 #781C68, #9A0680, #FFD39A, #FFF5E1
  */
-
-body {
-    direction: rtl;
-    margin: 0;
-    background-color: #FFF5E1;
+* {
+  direction: rtl;
 }
 
-h1 {
-    direction: ltr;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 36px;
-    line-height: 26px;
-    margin: 30px 0 20px;
-    color: #781C68;
-    text-shadow: 0px 0px 10px #FFD39A;
+ul, ol{
+    width: 400px;
+    border: 2px solid #781c68;
+    border-radius: 15px;
+    padding: 25px;
 }
 
-h2 {
-    text-align: center;
+h1, h2, h3, li {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 28px;
-    line-height: 30px;
-    margin: 0 0 40px;
-    color: #781C68;
-    text-shadow: 0px 0px 10px #FFD39A;
+    font-size: 22px;
+    color: #781c68;
 }
 
-.card h2 {
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 24px;
-    line-height: 26px;
-    margin: 10px 0 0;
-    color: #FFD39A;
-    text-shadow: 0px 0px 13px #FFF5E1;
-    letter-spacing: 6px;
-}
-
-.card h3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+li {
     font-size: 18px;
-    line-height: 20px;
-    margin: 0 0 5px;
-    color: #FFD39A;
+    color: #781C68;
+    margin: 5px;
 }
 
-.card p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 18px;
-    line-height: 20px;
-    color: #FFD39A;
-    margin: 0 0 15px;
-    opacity: 0.05;
-    transition: 0.5s;
+li:hover {
+    background-color: #FFD39A;
+    box-shadow: 4px 4px 6px gray;
 }
 
-.card p:hover {
-    opacity: 1;
-}
-
-.container-card {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 75%;
-    margin: 0 auto;
-    gap: 5px;
-}
-
-.card {
-    width: 300px;
-    background-color: #781C68;
-    color: #fff;
-    border: 7px solid #FFF5E1;
-    border-radius: 20px;
-    margin: 10px auto;
-    padding: 5px 8px;
-    box-shadow: 0px 0px 5px #808080;
-    transition: 0.5s;
-}
-
-.card:hover {
-    box-shadow: 6px 6px 25px #808080;
-    border-color: #FFD39A;
-}
